--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -10,11 +10,10 @@
     <%= link_to "New message", new_message_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="messages" class="min-w-full">
+  <div id="messages" class="min-w-full mt-3">
     <% @messages.each do |message| %>
-      <%= render message %>
       <p>
-        <%= link_to "Show this message", message, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        <%= link_to message.title, message, class: "text-blue-500" %>
       </p>
     <% end %>
   </div>
